site/manual/4.01/moduleexamples.md
<!-- ((! set title Manual !)) ((! set documentation !)) ((! set manual !)) ((! set nobreadcrumb !)) -->
<div class="manual content"><ul class="part_menu"><li><a href="coreexamples.html">The core language</a></li><li class="active"><a href="moduleexamples.html">The module system</a></li><li><a href="objectexamples.html">Objects in OCaml</a></li><li><a href="lablexamples.html">Labels and variants</a></li><li><a href="advexamples.html">Advanced examples with classes and modules</a></li></ul>




<h1 class="chapter" id="sec17"><span>Chapter 2</span>&nbsp;&nbsp;The module system</h1>
<header><nav class="toc brand"><a class="brand" href="https://ocaml.org/"><img src="colour-logo-gray.svg" class="svg" alt="OCaml"></a></nav><nav class="toc"><div class="toc_version"><a href="/docs" id="version-select">Version 4.01</a></div><div class="toc_title"><a href="#">The module system</a></div><ul><li class="top"><a href="#">Top</a></li>
<li><a href="moduleexamples.html#sec18">Structures</a>
</li><li><a href="moduleexamples.html#sec19">Signatures</a>
</li><li><a href="moduleexamples.html#sec20">Functors</a>
</li><li><a href="moduleexamples.html#sec21">Functors and type abstraction</a>
</li><li><a href="moduleexamples.html#sec22">Modules and separate compilation</a>
</li></ul></nav></header>
<p> <a id="c:moduleexamples"></a>

</p><p>This chapter introduces the module system of OCaml.</p>
<h2 class="section" id="sec18">1&nbsp;&nbsp;Structures</h2>
<p>A primary motivation for modules is to package together related
definitions (such as the definitions of a data type and associated
operations over that type) and enforce a consistent naming scheme for
these definitions. This avoids running out of names or accidentally
confusing names. Such a package is called a <em>structure</em> and
is introduced by the <span class="c007">struct</span>…<span class="c007">end</span> construct, which contains an
arbitrary sequence of definitions. The structure is usually given a
name with the <span class="c007">module</span> binding. Here is for instance a structure
packaging together a type of priority queues and their operations:
</p><pre><span class="c004">#<span class="c003"> module PrioQueue =
    struct
      type priority = int
      type 'a queue = Empty | Node of priority * 'a * 'a queue * 'a queue
      let empty = Empty
      let rec insert queue prio elt =
        match queue with
          Empty -&gt; Node(prio, elt, Empty, Empty)
        | Node(p, e, left, right) -&gt;
            if prio &lt;= p
            then Node(prio, elt, insert right p e, left)
            else Node(p, e, insert right prio elt, left)
      exception Queue_is_empty
      let rec remove_top = function
          Empty -&gt; raise Queue_is_empty
        | Node(prio, elt, left, Empty) -&gt; left
        | Node(prio, elt, Empty, right) -&gt; right
        | Node(prio, elt, (Node(lprio, lelt, _, _) as left),
                          (Node(rprio, relt, _, _) as right)) -&gt;
            if lprio &lt;= rprio
            then Node(lprio, lelt, remove_top left, right)
            else Node(rprio, relt, left, remove_top right)
      let extract = function
          Empty -&gt; raise Queue_is_empty
        | Node(prio, elt, _, _) as queue -&gt; (prio, elt, remove_top queue)
    end;;
<span class="c006">module PrioQueue :
  sig
    type priority = int
    type 'a queue = Empty | Node of priority * 'a * 'a queue * 'a queue
    val empty : 'a queue
    val insert : 'a queue -&gt; priority -&gt; 'a -&gt; 'a queue
    exception Queue_is_empty
    val remove_top : 'a queue -&gt; 'a queue
    val extract : 'a queue -&gt; priority * 'a * 'a queue
  end
</span></span></span></pre><p>
Outside the structure, its components can be referred to using the
“dot notation”, that is, identifiers qualified by a structure name.
For instance, <span class="c007">PrioQueue.insert</span> is the function <span class="c007">insert</span> defined
inside the structure <span class="c007">PrioQueue</span> and <span class="c007">PrioQueue.queue</span> is the type
<span class="c007">queue</span> defined in <span class="c007">PrioQueue</span>.
</p><pre><span class="c004">#<span class="c003"> PrioQueue.insert PrioQueue.empty 1 "hello";;
<span class="c006">- : string PrioQueue.queue =
PrioQueue.Node (1, "hello", PrioQueue.Empty, PrioQueue.Empty)
</span></span></span></pre>
<h2 class="section" id="sec19">2&nbsp;&nbsp;Signatures</h2>
<p>Signatures are interfaces for structures. A signature specifies
which components of a structure are accessible from the outside, and
with which type. It can be used to hide some components of a structure
(e.g. local function definitions) or export some components with a
restricted type. For instance, the signature below specifies the three
priority queue operations <span class="c007">empty</span>, <span class="c007">insert</span> and <span class="c007">extract</span>, but not the
auxiliary function <span class="c007">remove_top</span>. Similarly, it makes the <span class="c007">queue</span> type
abstract (by not providing its actual representation as a concrete type).
</p><pre><span class="c004">#<span class="c003"> module type PRIOQUEUE =
    sig
      type priority = int         (* still concrete *)
      type 'a queue               (* now abstract *)
      val empty : 'a queue
      val insert : 'a queue -&gt; int -&gt; 'a -&gt; 'a queue
      val extract : 'a queue -&gt; int * 'a * 'a queue
      exception Queue_is_empty
    end;;
<span class="c006">module type PRIOQUEUE =
  sig
    type priority = int
    type 'a queue
    val empty : 'a queue
    val insert : 'a queue -&gt; int -&gt; 'a -&gt; 'a queue
    val extract : 'a queue -&gt; int * 'a * 'a queue
    exception Queue_is_empty
  end
</span></span></span></pre><p>
Restricting the <span class="c007">PrioQueue</span> structure by this signature results in
another view of the <span class="c007">PrioQueue</span> structure where the <span class="c007">remove_top</span>
function is not accessible and the actual representation of priority
queues is hidden:
</p><pre><span class="c004">#</span><span class="c003"> module AbstractPrioQueue = (PrioQueue : PRIOQUEUE);;
<span class="c006">module AbstractPrioQueue : PRIOQUEUE

</span><span class="c004">#</span> <u>AbstractPrioQueue.remove_top</u>;;
<span class="c006">Error: Unbound value AbstractPrioQueue.remove_top

</span><span class="c004">#</span> AbstractPrioQueue.insert AbstractPrioQueue.empty 1 "hello";;
</span><span class="c006">- : string AbstractPrioQueue.queue = &lt;abstr&gt;
</span></pre><p>
The restriction can also be performed during the definition of the
structure, as in
</p><pre>module PrioQueue = (struct ... end : PRIOQUEUE);;
</pre><p>An alternate syntax is provided for the above:
</p><pre>module PrioQueue : PRIOQUEUE = struct ... end;;
</pre>
<h2 class="section" id="sec20">3&nbsp;&nbsp;Functors</h2>
<p>Functors are “functions” from structures to structures. They are used to
express parameterized structures: a structure <span class="c013">A</span> parameterized by a
structure <span class="c013">B</span> is simply a functor <span class="c013">F</span> with a formal parameter
<span class="c013">B</span> (along with the expected signature for <span class="c013">B</span>) which returns
the actual structure <span class="c013">A</span> itself. The functor <span class="c013">F</span> can then be
applied to one or several implementations <span class="c013">B</span><sub>1</sub> …<span class="c013">B</span><sub><span class="c013">n</span></sub>
of <span class="c013">B</span>, yielding the corresponding structures
<span class="c013">A</span><sub>1</sub> …<span class="c013">A</span><sub><span class="c013">n</span></sub>.</p><p>For instance, here is a structure implementing sets as sorted lists,
parameterized by a structure providing the type of the set elements
and an ordering function over this type (used to keep the sets
sorted):
</p><pre><span class="c004">#</span><span class="c003"> type comparison = Less | Equal | Greater;;
<span class="c006">type comparison = Less | Equal | Greater

</span><span class="c004">#</span> module type ORDERED_TYPE =
    sig
      type t
      val compare: t -&gt; t -&gt; comparison
    end;;
<span class="c006">module type ORDERED_TYPE = sig type t val compare : t -&gt; t -&gt; comparison end

</span><span class="c004">#</span> module Set =
    functor (Elt: ORDERED_TYPE) -&gt;
      struct
        type element = Elt.t
        type set = element list
        let empty = []
        let rec add x s =
          match s with
            [] -&gt; [x]
          | hd::tl -&gt;
             match Elt.compare x hd with
               Equal   -&gt; s         (* x is already in s *)
             | Less    -&gt; x :: s    (* x is smaller than all elements of s *)
             | Greater -&gt; hd :: add x tl
        let rec member x s =
          match s with
            [] -&gt; false
          | hd::tl -&gt;
              match Elt.compare x hd with
                Equal   -&gt; true     (* x belongs to s *)
              | Less    -&gt; false    (* x is smaller than all elements of s *)
              | Greater -&gt; member x tl
      end;;
</span><span class="c006">module Set :
  functor (Elt : ORDERED_TYPE) -&gt;
    sig
      type element = Elt.t
      type set = element list
      val empty : 'a list
      val add : Elt.t -&gt; Elt.t list -&gt; Elt.t list
      val member : Elt.t -&gt; Elt.t list -&gt; bool
    end
</span></pre><p>
By applying the <span class="c007">Set</span> functor to a structure implementing an ordered
type, we obtain set operations for this type:
</p><pre><span class="c004">#</span><span class="c003"> module OrderedString =
    struct
      type t = string
      let compare x y = if x = y then Equal else if x &lt; y then Less else Greater
    end;;
<span class="c006">module OrderedString :
  sig type t = string val compare : 'a -&gt; 'a -&gt; comparison end

</span><span class="c004">#</span> module StringSet = Set(OrderedString);;
<span class="c006">module StringSet :
  sig
    type element = OrderedString.t
    type set = element list
    val empty : 'a list
    val add : OrderedString.t -&gt; OrderedString.t list -&gt; OrderedString.t list
    val member : OrderedString.t -&gt; OrderedString.t list -&gt; bool
  end

</span><span class="c004">#</span> StringSet.member "bar" (StringSet.add "foo" StringSet.empty);;
</span><span class="c006">- : bool = false
</span></pre>
<h2 class="section" id="sec21">4&nbsp;&nbsp;Functors and type abstraction</h2>
<p>As in the <span class="c007">PrioQueue</span> example, it would be good style to hide the
actual implementation of the type <span class="c007">set</span>, so that users of the
structure will not rely on sets being lists, and we can switch later
to another, more efficient representation of sets without breaking
their code. This can be achieved by restricting <span class="c007">Set</span> by a suitable
functor signature:
</p><pre><span class="c004">#</span><span class="c003"> module type SETFUNCTOR =
    functor (Elt: ORDERED_TYPE) -&gt;
      sig
        type element = Elt.t      (* concrete *)
        type set                  (* abstract *)
        val empty : set
        val add : element -&gt; set -&gt; set
        val member : element -&gt; set -&gt; bool
      end;;
<span class="c006">module type SETFUNCTOR =
  functor (Elt : ORDERED_TYPE) -&gt;
    sig
      type element = Elt.t
      type set
      val empty : set
      val add : element -&gt; set -&gt; set
      val member : element -&gt; set -&gt; bool
    end

</span><span class="c004">#</span> module AbstractSet = (Set : SETFUNCTOR);;
<span class="c006">module AbstractSet : SETFUNCTOR

</span><span class="c004">#</span> module AbstractStringSet = AbstractSet(OrderedString);;
<span class="c006">module AbstractStringSet :
  sig
    type element = OrderedString.t
    type set = AbstractSet(OrderedString).set
    val empty : set
    val add : element -&gt; set -&gt; set
    val member : element -&gt; set -&gt; bool
  end

</span><span class="c004">#</span> AbstractStringSet.add "gee" AbstractStringSet.empty;;
</span><span class="c006">- : AbstractStringSet.set = &lt;abstr&gt;
</span></pre><p>In an attempt to write the type constraint above more elegantly,
one may wish to name the signature of the structure
returned by the functor, then use that signature in the constraint:
</p><pre><span class="c004">#</span><span class="c003"> module type SET =
    sig
      type element
      type set
      val empty : set
      val add : element -&gt; set -&gt; set
      val member : element -&gt; set -&gt; bool
    end;;
<span class="c006">module type SET =
  sig
    type element
    type set
    val empty : set
    val add : element -&gt; set -&gt; set
    val member : element -&gt; set -&gt; bool
  end

</span><span class="c004">#</span> module WrongSet = (Set : functor(Elt: ORDERED_TYPE) -&gt; SET);;
<span class="c006">module WrongSet : functor (Elt : ORDERED_TYPE) -&gt; SET

</span><span class="c004">#</span> module WrongStringSet = WrongSet(OrderedString);;
<span class="c006">module WrongStringSet :
  sig
    type element = WrongSet(OrderedString).element
    type set = WrongSet(OrderedString).set
    val empty : set
    val add : element -&gt; set -&gt; set
    val member : element -&gt; set -&gt; bool
  end

</span><span class="c004">#</span> WrongStringSet.add <u>"gee"</u> WrongStringSet.empty;;
</span><span class="c006">Error: This expression has type string but an expression was expected of type
         WrongStringSet.element = WrongSet(OrderedString).element
</span></pre><p>
The problem here is that <span class="c007">SET</span> specifies the type <span class="c007">element</span>
abstractly, so that the type equality between <span class="c007">element</span> in the result
of the functor and <span class="c007">t</span> in its argument is forgotten. Consequently,
<span class="c007">WrongStringSet.element</span> is not the same type as <span class="c007">string</span>, and the
operations of <span class="c007">WrongStringSet</span> cannot be applied to strings.
As demonstrated above, it is important that the type <span class="c007">element</span> in the
signature <span class="c007">SET</span> be declared equal to <span class="c007">Elt.t</span>; unfortunately, this is
impossible above since <span class="c007">SET</span> is defined in a context where <span class="c007">Elt</span> does
not exist. To overcome this difficulty, OCaml provides a
<span class="c007">with type</span> construct over signatures that allows enriching a signature
with extra type equalities:
</p><pre><span class="c004">#<span class="c003"> module AbstractSet2 =
    (Set : functor(Elt: ORDERED_TYPE) -&gt; (SET with type element = Elt.t));;
<span class="c006">module AbstractSet2 :
  functor (Elt : ORDERED_TYPE) -&gt;
    sig
      type element = Elt.t
      type set
      val empty : set
      val add : element -&gt; set -&gt; set
      val member : element -&gt; set -&gt; bool
    end
</span></span></span></pre><p>As in the case of simple structures, an alternate syntax is provided
for defining functors and restricting their result:
</p><pre>module AbstractSet2(Elt: ORDERED_TYPE) : (SET with type element = Elt.t) =
  struct ... end;;
</pre><p>
Abstracting a type component in a functor result is a powerful
technique that provides a high degree of type safety, as we now
illustrate. Consider an ordering over character strings that is
different from the standard ordering implemented in the
<span class="c007">OrderedString</span> structure. For instance, we compare strings without
distinguishing upper and lower case.
</p><pre><span class="c004">#</span><span class="c003"> module NoCaseString =
    struct
      type t = string
      let compare s1 s2 =
        OrderedString.compare (String.lowercase s1) (String.lowercase s2)
    end;;
<span class="c006">module NoCaseString :
  sig type t = string val compare : string -&gt; string -&gt; comparison end

</span><span class="c004">#</span> module NoCaseStringSet = AbstractSet(NoCaseString);;
<span class="c006">module NoCaseStringSet :
  sig
    type element = NoCaseString.t
    type set = AbstractSet(NoCaseString).set
    val empty : set
    val add : element -&gt; set -&gt; set
    val member : element -&gt; set -&gt; bool
  end

</span><span class="c004">#</span> NoCaseStringSet.add "FOO" <u>AbstractStringSet.empty</u>;;
</span><span class="c006">Error: This expression has type
         AbstractStringSet.set = AbstractSet(OrderedString).set
       but an expression was expected of type
         NoCaseStringSet.set = AbstractSet(NoCaseString).set
</span></pre><p>
Note that the two types <span class="c007">AbstractStringSet.set</span> and
<span class="c007">NoCaseStringSet.set</span> are not compatible, and values of these
two types do not match. This is the correct behavior: even though both
set types contain elements of the same type (strings), they are built
upon different orderings of that type, and different invariants need
to be maintained by the operations (being strictly increasing for the
standard ordering and for the case-insensitive ordering). Applying
operations from <span class="c007">AbstractStringSet</span> to values of type
<span class="c007">NoCaseStringSet.set</span> could give incorrect results, or build
lists that violate the invariants of <span class="c007">NoCaseStringSet</span>.</p>
<h2 class="section" id="sec22">5&nbsp;&nbsp;Modules and separate compilation</h2>
<p>All examples of modules so far have been given in the context of the
interactive system. However, modules are most useful for large,
batch-compiled programs. For these programs, it is a practical
necessity to split the source into several files, called compilation
units, that can be compiled separately, thus minimizing recompilation
after changes.</p><p>In OCaml, compilation units are special cases of structures
and signatures, and the relationship between the units can be
explained easily in terms of the module system. A compilation unit <span class="c013">A</span>
comprises two files:
</p><ul class="itemize"><li class="li-itemize">
the implementation file <span class="c013">A</span><span class="c007">.ml</span>, which contains a sequence
of definitions, analogous to the inside of a <span class="c007">struct</span>…<span class="c007">end</span>
construct;
</li><li class="li-itemize">the interface file <span class="c013">A</span><span class="c007">.mli</span>, which contains a sequence of
specifications, analogous to the inside of a <span class="c007">sig</span>…<span class="c007">end</span>
construct.
</li></ul><p>
These two files together define a structure named <span class="c013">A</span> as if
the following definition was entered at top-level:
</p><pre>module <span class="c013">A</span>: sig (* contents of file <span class="c013">A</span>.mli *) end
        = struct (* contents of file <span class="c013">A</span>.ml *) end;;
</pre><p>
The files that define the compilation units can be compiled separately
using the <span class="c007">ocamlc -c</span> command (the <span class="c007">-c</span> option means “compile only, do
not try to link”); this produces compiled interface files (with
extension <span class="c007">.cmi</span>) and compiled object code files (with extension
<span class="c007">.cmo</span>). When all units have been compiled, their <span class="c007">.cmo</span> files are
linked together using the <span class="c007">ocamlc</span> command. For instance, the following
commands compile and link a program composed of two compilation units
<span class="c007">Aux</span> and <span class="c007">Main</span>:
</p><pre>$ ocamlc -c Aux.mli                     # produces aux.cmi
$ ocamlc -c Aux.ml                      # produces aux.cmo
$ ocamlc -c Main.mli                    # produces main.cmi
$ ocamlc -c Main.ml                     # produces main.cmo
$ ocamlc -o theprogram Aux.cmo Main.cmo
</pre><p>The program behaves exactly as if the following phrases were entered
at top-level:
</p><pre>module Aux: sig (* contents of Aux.mli *) end
          = struct (* contents of Aux.ml *) end;;
module Main: sig (* contents of Main.mli *) end
           = struct (* contents of Main.ml *) end;;
</pre><p>
In particular, <span class="c007">Main</span> can refer to <span class="c007">Aux</span>: the definitions and
declarations contained in <span class="c007">Main.ml</span> and <span class="c007">Main.mli</span> can refer to
definition in <span class="c007">Aux.ml</span>, using the <span class="c007">Aux.</span><span class="c013">ident</span> notation, provided
these definitions are exported in <span class="c007">Aux.mli</span>.</p><p>The order in which the <span class="c007">.cmo</span> files are given to <span class="c007">ocamlc</span> during the
linking phase determines the order in which the module definitions
occur. Hence, in the example above, <span class="c007">Aux</span> appears first and <span class="c007">Main</span> can
refer to it, but <span class="c007">Aux</span> cannot refer to <span class="c007">Main</span>.</p><p>Note that only top-level structures can be mapped to
separately-compiled files, but neither functors nor module types.
However, all module-class objects can appear as components of a
structure, so the solution is to put the functor or module type
inside a structure, which can then be mapped to a file.

</p>
<hr>





<div class="copyright">The present documentation is copyright Institut National de Recherche en Informatique et en Automatique (INRIA). A complete version can be obtained from <a href="http://caml.inria.fr/pub/docs/manual-ocaml/">this page</a>.</div></div>